# CDA_project

./: Oyer_Christopher_project_writeup.docx  README.md  notes.txt  project_proposal.ipynb  pyproject.toml  requirements.txt
model_results/: train_results2022-08-02__03-26___personas-1__latents-4.hdf5  train_results2022-08-02__03-27___personas-1__latents-12.hdf5  train_results2022-08-02__03-27___personas-1__latents-8.hdf5  train_results2022-08-02__03-27___personas-2__latents-4.hdf5  train_results2022-08-02__03-28___personas-2__latents-8.hdf5  train_results2022-08-02__03-30___personas-3__latents-4.hdf5
src/: check_results.ipynb  check_results.py  preprocess.py
src/ALS/: factorization.py
src/SGD/: torchSGD_train.py
