[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CDA_project-recommender_system"
version = "0.0.1"
authors = [
  { name="Christopher Oyer", email="coyer3@gatech.edu" },
]
description = "music recommender engine"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chrisoyer/"